--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>This is a test for GitHub</h1>
+        <li>Sand</li>
+        <li>Brick</li>
+        <li>Rocks</li>
     </body>
 </html>
